--- a/layouts/partials/doc/error_listener.html
+++ b/layouts/partials/doc/error_listener.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#error_listener-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#error_listener-ts">TypeScript</a>
 		</li>
@@ -96,6 +102,19 @@ await nc.connect(
 
 # Do something with the connection.
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="error_listener-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/error_listener.rb#L1-11"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+
+NATS.start(servers:[&#34;nats://demo.nats.io:4222&#34;]) do |nc|
+   nc.on_error do |e|
+    puts &#34;Error: #{e}&#34;
+  end
+
+  nc.close
+end
 </code></pre>
 		
 	
