--- a/layouts/partials/doc/reconnect_10s.html
+++ b/layouts/partials/doc/reconnect_10s.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#reconnect_10s-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#reconnect_10s-ts">TypeScript</a>
 		</li>
@@ -66,6 +72,18 @@ await nc.connect(
 
 await nc.close()
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="reconnect_10s-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/reconnect_10s.rb#L1-10"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+
+NATS.start(servers: [&#34;nats://127.0.0.1:1222&#34;, &#34;nats://127.0.0.1:1223&#34;, &#34;nats://127.0.0.1:1224&#34;], reconnect_time_wait: 10) do |nc|
+   # Do something with the connection
+
+   # Close the connection
+   nc.close
+end
 </code></pre>
 		
 	
