--- a/layouts/partials/doc/slow_listener.html
+++ b/layouts/partials/doc/slow_listener.html
@@ -20,6 +20,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#slow_listener-ruby">Ruby</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -123,6 +129,11 @@ public class SlowConsumerListener {
 
    await nc.close()
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="slow_listener-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L25-27"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client currently does not have option to customize slow consumer limits per sub.
 </code></pre>
 		
 	
