--- a/layouts/partials/doc/slow_pending_limits.html
+++ b/layouts/partials/doc/slow_pending_limits.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#slow_pending_limits-ruby">Ruby</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -67,6 +73,11 @@ sub.setPendingLimits(1_000, 5 * 1024 * 1024); // Set limits on a subscription
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="slow_pending_limits-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L21-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client currently does not have option to customize slow consumer limits per sub.
 </code></pre>
 		
 	
