--- a/layouts/partials/doc/subscribe_async.html
+++ b/layouts/partials/doc/subscribe_async.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#subscribe_async-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#subscribe_async-ts">TypeScript</a>
 		</li>
@@ -96,6 +102,21 @@ await nc.flush()
 
 # Wait for message to come in
 msg = await asyncio.wait_for(future, 1)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_async-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/subscribe_async.rb#L1-13"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+
+NATS.start(servers:[&#34;nats://127.0.0.1:4222&#34;]) do |nc|
+  nc.subscribe(&#34;updates&#34;) do |msg|
+    puts msg
+    nc.close
+  end
+
+  nc.publish(&#34;updates&#34;, &#34;All is Well&#34;)
+end
 
 </code></pre>
 		
