--- a/layouts/partials/doc/subscribe_sync.html
+++ b/layouts/partials/doc/subscribe_sync.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#subscribe_sync-ruby">Ruby</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -58,6 +64,11 @@ System.out.println(str);
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_sync-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L17-19"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client subscriptions are all async.
 </code></pre>
 		
 	
