--- a/layouts/partials/doc/connect_pedantic.html
+++ b/layouts/partials/doc/connect_pedantic.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#connect_pedantic-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#connect_pedantic-ts">TypeScript</a>
 		</li>
@@ -65,6 +71,23 @@ await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;], pedantic=True)
 
 # Do something with the connection.
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_pedantic-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/connect_pedantic.rb#L1-15"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+
+NATS.start(pedantic: true) do |nc|
+   nc.on_reconnect do
+    puts &#34;Got reconnected to #{nc.connected_server}&#34;
+  end
+
+  nc.on_disconnect do |reason|
+    puts &#34;Got disconnected! #{reason}&#34;
+  end
+
+  nc.close
+end
 </code></pre>
 		
 	
