--- a/layouts/partials/doc/connect_token.html
+++ b/layouts/partials/doc/connect_token.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#connect_token-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#connect_token-ts">TypeScript</a>
 		</li>
@@ -62,6 +68,13 @@ await nc.connect(servers=[&#34;nats://mytoken@demo.nats.io:4222&#34;])
 
 # Do something with the connection.
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_token-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/connect_token.rb#L3-7"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">NATS.start(token: &#34;deadbeef&#34;) do |nc|
+  puts &#34;Connected using token&#34;
+end
 </code></pre>
 		
 	
