--- a/layouts/partials/doc/connect_url.html
+++ b/layouts/partials/doc/connect_url.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#connect_url-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#connect_url-ts">TypeScript</a>
 		</li>
@@ -58,6 +64,18 @@ await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
 
 await nc.close()
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_url-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/connect_url.rb#L1-10"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+
+NATS.start(servers: [&#34;nats://demo.nats.io:4222&#34;]) do |nc|
+   # Do something with the connection
+
+   # Close the connection
+   nc.close
+end
 </code></pre>
 		
 	
