--- a/layouts/partials/doc/publish_bytes.html
+++ b/layouts/partials/doc/publish_bytes.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#publish_bytes-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#publish_bytes-ts">TypeScript</a>
 		</li>
@@ -62,6 +68,15 @@ await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
 
 await nc.publish(&#34;updates&#34;, b&#39;All is Well&#39;)
 
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="publish_bytes-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/publish_bytes.rb#L1-7"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+
+NATS.start(servers:[&#34;nats://127.0.0.1:4222&#34;]) do |nc|
+  nc.publish(&#34;updates&#34;, &#34;All is Well&#34;)
+end
 </code></pre>
 		
 	
