--- a/layouts/partials/doc/unsubscribe.html
+++ b/layouts/partials/doc/unsubscribe.html
@@ -21,6 +21,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="ruby">
+		  <a data-toggle="tab" href="#unsubscribe-ruby">Ruby</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#unsubscribe-ts">TypeScript</a>
 		</li>
@@ -98,6 +104,35 @@ await nc.unsubscribe(sid)
 
 # Won&#39;t be received...
 await nc.publish(&#34;updates&#34;, b&#39;...&#39;)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="unsubscribe-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/unsubscribe.rb#L1-27"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby">require &#39;nats/client&#39;
+require &#39;fiber&#39;
+
+NATS.start(servers:[&#34;nats://127.0.0.1:4222&#34;]) do |nc|
+  Fiber.new do
+    f = Fiber.current
+
+    sid = nc.subscribe(&#34;time&#34;) do |msg, reply|
+      f.resume Time.now
+    end
+
+    nc.publish(&#34;time&#34;, &#39;What is the time?&#39;, NATS.create_inbox)
+
+    # Use the response
+    msg = Fiber.yield
+    puts &#34;Reply: #{msg}&#34;
+
+    nc.unsubscribe(sid)
+
+    # Won&#39;t be received
+    nc.publish(&#34;time&#34;, &#39;What is the time?&#39;, NATS.create_inbox)
+
+  end.resume
+end
 
 </code></pre>
 		
